--- a/covid19/style.css
+++ b/covid19/style.css
@@ -19,3 +19,25 @@
 .link {
     font-size: 1.7em;
 }
+
+a {
+    display: block;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 30px;
+}
+
+/*iframe {
+    width: 600px;
+  height: 400px;
+}
+
+.thumbnail {
+    -ms-zoom: 0.25;
+  -moz-transform: scale(0.25);
+  -moz-transform-origin: 0 0;
+  -o-transform: scale(0.25);
+  -o-transform-origin: 0 0;
+  -webkit-transform: scale(0.25);
+  -webkit-transform-origin: 0 0;
+}*/
